2007-10-02 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindow.m (-deminiaturize:, -miniaturize:): Try to
	handle the case better, where GNUstep manages the mini window and
	the window decoration itself.
	Based on patch by Stefan Bidigaray <stefanbidi@gmail.com>.

2007-10-02 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPopUpButtonCell.m (-cellSize): Don't return zero size,
	when there are no items. Based on patch by Andreas Höschler
	<ahoesch@smartsoft.de>. 

2007-10-01 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSDocument.m (-setFileName:, -fileURL:, -setUndoManager:
	-writeToURL:...error:): Small fixes of previous changes.
	Patch by Wolfgang Lux <wolfgang.lux@gmail.com>. 

2007-09-30 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindow.m (-cascadeTopLeftFromPoint:): Adopt the
	resulting next point to visible screen. Based on patch by 
	Wolfgang Lux <wolfgang.lux@gmail.com>. 
	
2007-09-13 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTableView.m (-validateEditing): Set object value to
	nil, when formatting the string failed.
	* Source/NSActionCell.m (-intValue): Check flag in_editing before
	validating the editing. 

2007-09-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSToolbarItem.m (GSToolbarButtonCell-drawInteriorWithFrame:inView:): 
	Made working for a flipped view.

2007-09-11 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSSplitView.m (-displayRectIgnoringOpacity:inContext:):
	Implement this method instead of the two old display methods.

2007-09-11 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTextView.m (-drawRect:, -rectForCharacterRange:,
	-firstRectForCharacterRange:): Protect againt layoutmanager being nil.
	* Source/NSTableView.m (-validateEditing): Use setStringValue:
	when converting the string failed.
	* Source/NSTableView.m (-mouseDown:): Don't interrupt editing
	another cell, if the current string isn't valid.
	Patches partly by Andreas Höschler <ahoesch@smartsoft.de>.
	
2007-09-10 Fred Kiefer <FredKiefer@gmx.de>
